<resources>
    <string name="app_name">یونجه</string>
    <string name="email">ایمیل</string>
    <string name="password">کلمه‌ی عبور</string>
    <string name="login">ورود</string>
    <string name="unable_to_connect_to_server">مشکل در برقراری ارتباط با سرور</string>
    <string name="field_should_not_be_empty">این فیلد را حتما باید پر شود.</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="recent_visits">بازدید‌های اخیر</string>
    <string name="recommended">پیشنهاد‌شده‌ها:</string>
    <string name="special_features">ویژگی‌ها</string>
    <string name="nearby_zones">منطقه‌های اطراف</string>
    <string name="retry">تلاش دوباره</string>
    <string name="toman">تومان</string>
    <string name="by">توسط</string>
    <string name="on">در</string>
    <string name="next_step">مرحله‌ی بعد</string>
    <string name="previous_step">مرحله‌ی قبل</string>
    <string name="finish">پایان</string>
    <string name="reservation_without_table_selection">انجام رزرو بدون انتخاب میز</string>
    <string name="number_of_guests">تعداد مهمان‌ها</string>
    <string name="reserve">رزرو</string>
    <string name="note_to_restaurant">یادداشت برای رستوران (اختیاری)</string>
    <string name="the_table_is_booked_under_this_name">این میز با نام زیر رزرو می‌شود</string>
    <string name="agree_term_of_use_by_clicking_on_reserve_button">کلیک بر روی دکمه‌ی رزرو به معنای خواندن و قبول تمامی شرایط استفاده است.</string>
    <string name="table_for">میز برای</string>
    <string name="person">نفر</string>
    <string name="close">بستن</string>
    <string name="table">میز</string>
    <string name="view">مشاهده</string>
    <string name="no_selected_table">میزی انتخاب نشده است.</string>
    <string name="unable_to_reserve_this_table">متاسفانه امکان رزرو این میز وجود ندارد.</string>
    <string name="breakfast">صبحانه</string>
    <string name="lunch">ناهار</string>
    <string name="dinner">شام</string>
    <string name="successful_reserve">رزرو شما با موفقیت انجام شد.</string>
    <string name="tags">ویژگی‌ها</string>
    <string name="select_tag">انتخاب ویژگی</string>
    <string name="no_result">بدون نتایج</string>
    <string name="zone_select_hint">نام منطفه (مثال: انقلاب)</string>
    <string name="current_location">مکان فعلی</string>
    <string name="select_zone">انتخاب منطقه</string>
    <string name="home_page">صفحه‌ی اصلی</string>
    <string name="search">جست‌و‌جو</string>
    <string name="login_register">ورود / ثبت‌نام</string>
    <string name="about_us">درباره ما</string>
    <string name="user_points">%1d امتیاز</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="guest_count_label">میز برای %1d نفر</string>
    <string name="cancel_reservation">کنسل‌کردن رزرو</string>
    <string name="reservation_cancel_hint" formatted="false">آیا شما مطمئن می‌خواهید رززو خود را در «%1s» روز %2s، ساعت %3s کنسل کنید؟</string>
    <string name="please_wait">لطفا صبر کنید…</string>
    <string name="unable_to_connect_to_server_try_again">مشکل در برقراری ارتباط با سرور، دوباره امتحان کنید.</string>
    <string name="reservation_canceled_successfully">رزرو با موفقیت کنسل شد.</string>
    <string name="coming_reservations">رزرو‌های پیش‌ رو</string>
    <string name="show_table_with_name">میز %1s - مشاهده</string>
    <string name="authentication_is_needed_to_perform_reservation">برای ثبت رزرو، ابتدا باید وارد شوید.</string>
    <string name="google_sign_in_is_canceled">مضکل در احراز هویت با حساب گوگل، لطفا دوباره امتحان کنید.</string>

</resources>
