<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="30dp">

    <TextView
        android:id="@+id/number_of_guests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/number_of_guests"
        android:textSize="20sp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/number_of_guests"
        android:clipToPadding="false"/>

    <Button
        android:id="@+id/btn_next"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/material_step_1_margin"
        android:layout_marginLeft="@dimen/material_step_1_margin"
        android:text="@string/next_step"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:id="@+id/btn_previous"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/material_step_1_margin"
        android:layout_marginRight="@dimen/material_step_1_margin"
        android:text="@string/previous_step"
        android:textColor="@color/colorPrimary"/>

</RelativeLayout>