<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp"
        android:text="@string/cancel_reservation"
        android:textColor="@color/black_87"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/progress_bar_container"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_marginRight="24dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="24dp"
            android:text="@string/please_wait"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"/>
    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/reservation_cancel_hint"
        android:textSize="16sp"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/error_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/unable_to_connect_to_server_try_again"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="24dp"
        android:paddingLeft="8dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_ok"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"

            android:minWidth="60dp"
            android:text="بله، کنسل کن"
            android:textColor="#4497EC"
            android:textStyle="bold"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:minWidth="60dp"
            android:text="خیر"
            android:textColor="#4497EC"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>