<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/error_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="@dimen/material_step_1_margin"
                android:layout_marginRight="@dimen/material_step_1_margin"
                app:cardBackgroundColor="#ffaa00"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="@dimen/material_step_1_margin"
                    android:layout_marginRight="@dimen/material_step_1_margin"
                    android:layout_marginTop="8dp"
                    android:gravity="right"
                    android:text="@string/unable_to_reserve_this_table"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="@dimen/material_step_1_margin"
                android:layout_marginRight="@dimen/material_step_1_margin"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:id="@+id/date_container"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/month"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_above="@+id/day_num"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:text="شهریور"
                            android:textColor="@color/black_54"/>

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/day_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:gravity="center"
                            android:text="۲۵"
                            android:textColor="@color/black_87"
                            android:textSize="40sp"/>

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/weekday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/day_num"
                            android:layout_centerHorizontal="true"
                            android:gravity="center"
                            android:text="چهارشنبه"
                            android:textColor="@color/black_54"/>
                    </RelativeLayout>

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="13dp"
                        android:layout_toLeftOf="@+id/date_container"
                        android:src="@drawable/ic_access_time_20dp"
                        android:tint="#9c9c9c"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/imageView"
                        android:layout_marginEnd="11dp"
                        android:layout_marginRight="11dp"
                        android:layout_marginTop="0dp"
                        android:layout_toLeftOf="@+id/imageView"
                        android:gravity="right"
                        android:lines="1"
                        android:maxLines="1"
                        android:text="۱۲:۴۵ بعد از ظهر"
                        android:textColor="@color/black_87"/>

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_below="@id/imageView"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="13dp"
                        android:layout_toLeftOf="@+id/date_container"
                        android:src="@drawable/ic_people_24dp"
                        android:tint="#9c9c9c"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/label_guest_count"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/imageView2"
                        android:layout_marginEnd="11dp"
                        android:layout_marginRight="11dp"
                        android:layout_marginTop="0dp"
                        android:layout_toLeftOf="@+id/imageView2"
                        android:text="میز برای ۴ نفر"
                        android:textColor="@color/black_87"/>

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:layout_below="@id/imageView2"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="13dp"
                        android:layout_toLeftOf="@+id/date_container"
                        android:src="@drawable/ic_table_17dp"
                        android:tint="#9c9c9c"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/selected_table"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/imageView3"
                        android:layout_marginEnd="11dp"
                        android:layout_marginRight="11dp"
                        android:layout_marginTop="0dp"
                        android:layout_toLeftOf="@+id/imageView3"
                        android:background="?attr/selectableItemBackground"
                        android:text="@string/no_selected_table"
                        android:textColor="@color/black_54"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/material_step_1_margin"
                android:layout_marginRight="@dimen/material_step_1_margin"
                android:layout_marginTop="10dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/label_reserved_by"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="@dimen/material_step_1_margin"
                        android:layout_marginTop="10dp"
                        android:text="@string/the_table_is_booked_under_this_name"/>

                    <ImageView
                        android:id="@+id/user_avatar"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/label_reserved_by"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="@dimen/material_step_1_margin"
                        android:layout_marginTop="@dimen/material_step_1_margin"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/user_avatar"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="2dp"
                        android:layout_toLeftOf="@+id/user_avatar"
                        android:text="امیرحسین کاظم‌نژاد"
                        android:textColor="@color/black_87"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/user_name"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_toLeftOf="@+id/user_avatar"
                        android:text="۰۹۱۲ ۰۲۴ ۲۵ ۷۰"/>


                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/material_step_1_margin"
                android:layout_marginRight="@dimen/material_step_1_margin"
                android:layout_marginTop="10dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="8dp">

                    <EditText
                        android:id="@+id/et_note_to_restaurant"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:layout_marginLeft="@dimen/material_step_1_margin"
                        android:layout_marginRight="@dimen/material_step_1_margin"
                        android:background="@android:color/transparent"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="right"
                        android:hint="@string/note_to_restaurant"
                        android:textColor="@color/black_87"
                        android:textSize="15sp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/label_agree_terms_of_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/material_step_1_margin"
                android:layout_marginRight="@dimen/material_step_1_margin"
                android:layout_marginTop="20dp"
                android:gravity="right"
                android:text="@string/agree_term_of_use_by_clicking_on_reserve_button"
                android:textSize="12sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@+id/btn_reservation_container"
        android:background="@drawable/toolbar_drop_shadow"
        android:rotation="180"/>

    <FrameLayout
        android:id="@+id/btn_reservation_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/reserve"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <View
            android:id="@+id/btn_reserve"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"/>

    </FrameLayout>

    <View
        android:id="@+id/click_disabler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

</RelativeLayout>